# ledger-fortress

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSES.md  NOTICE  README.md  SECURITY.md
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish-check.yml  snyk-security.yml
client/python/: NOTICE  README.md  pyproject.toml
client/python/ledger_fortress/: __init__.py  fortress.py
client/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
client/typescript/src/: index.ts  stripe.ts
client/typescript/test/: e2e-simulation.ts  ledger.test.ts  stripe.test.ts
docs/: INVARIANTS.md  architecture.md  babysea-provenance.md  concurrency-tests.md  crash-recovery.md  edge-cases.md  stripe-event-matrix.md  stripe-integration.md
examples/concurrency-simulation/: README.md  reserve-race.ts
examples/docker-compose-local/: README.md  docker-compose.yml
examples/python-sdk-demo/: README.md  demo.py
examples/real-stack-smoke/: README.md  validate.py
examples/typescript-sdk-demo/: README.md  demo.ts  package-lock.json  package.json  tsconfig.json
migrations/: 001_credits.sql  002_credit_alerts.sql  003_security.sql
schemas/: credit-alert.v1.json  credit-event.v1.json
scripts/: verify-anon-denied.sh  verify-functions.sh  verify-rls.sh
test/: e2e-simulation.ts  invariants.pgtap.sql
